--- a/.github/workflows/release-docker.yaml
+++ b/.github/workflows/release-docker.yaml
@@ -7,6 +7,11 @@ on:
         description: 'Version to release (e.g. 0.8.2)'
         required: true
         type: string
+      isLatest:
+        description: 'Tag this version as latest'
+        required: false
+        type: boolean
+        default: true
 
 permissions:
   contents: read
@@ -44,25 +49,25 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            corentinth/papra:latest-root
             corentinth/papra:${{ inputs.version }}-root
-            ghcr.io/papra-hq/papra:latest-root
             ghcr.io/papra-hq/papra:${{ inputs.version }}-root
+            ${{ inputs.isLatest && 'corentinth/papra:latest-root' || '' }}
+            ${{ inputs.isLatest && 'ghcr.io/papra-hq/papra:latest-root' || '' }}
 
       - name: Build and push rootless Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./docker/Dockerfile.rootless
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            corentinth/papra:latest
-            corentinth/papra:latest-rootless
             corentinth/papra:${{ inputs.version }}-rootless
-            ghcr.io/papra-hq/papra:latest
-            ghcr.io/papra-hq/papra:latest-rootless
             ghcr.io/papra-hq/papra:${{ inputs.version }}-rootless
+            ${{ inputs.isLatest && 'corentinth/papra:latest' || '' }}
+            ${{ inputs.isLatest && 'corentinth/papra:latest-rootless' || '' }}
+            ${{ inputs.isLatest && 'ghcr.io/papra-hq/papra:latest' || '' }}
+            ${{ inputs.isLatest && 'ghcr.io/papra-hq/papra:latest-rootless' || '' }}
